test/libsolidity/syntaxTests/pragma/broken_version_2.sol
pragma solidity pragma;
// ----
// ParserError 1684: (0-23): Invalid version pragma. Expected the start of a version number but instead found character 'p'. Version number is invalid or the pragma is not terminated with a semicolon.
